# rust_os

./: Cargo.toml  README.md  x64-build-config.json
.cargo/: config.toml
src/: console.rs  main.rs  panic.rs
src/drivers/: keyboard.rs  mod.rs  pic8259.rs  serial.rs  vga_buffer.rs
src/interrupts/: gdt.rs  idt.rs  mod.rs  page_fault.rs  timer.rs
src/mm/: allocator.rs  buddy_allocator.rs  bump_allocator.rs  heap_allocator.rs  mod.rs  page_table.rs  pool_allocator.rs  segregated_alloctor.rs  slab_allocator.rs
src/tests/: mod.rs  test.rs  unit_test.rs  vga_test.rs
tests/: example-integration-test.rs
