#Cargo.toml is the manifest file for Rust. It’s where you keep metadata for your project, as well as dependencies.
[package]
name = "tor"
version = "0.1.0"
authors = ["wzx-ipads <593074943@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bootloader = { version = "0.9.11", features = ["map_physical_memory"]}
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.12.1"
uart_16550 = "0.2.10"
pic8259_simple = "0.2.0"
pc-keyboard = "0.5.1"
linked_list_allocator = "0.8.6"

# Statics are initialized at compile time. When using lazy_static. the static lazilly initializes itself when it`s accessed the first time.
[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

# The bootimage runner appends the test-args to the default QEMU command for all test executables. For a normal cargo run, the arguments are ignored.
[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04","-serial", "stdio","-display", "none"]
run-args = ["-serial", "stdio"]
test-success-exit-code = 33         # (0x10 << 1) | 1
test-timeout = 300          # (in seconds)
